# make_interface

./: LICENSE  README.md  pyproject.toml
examples/: .gitignore
examples/Ag/: surface111.py  surface_smallest.py
examples/Ag-Au/: interface111.py
examples/Au-Ag/: Ag.xsf  Au.xsf  surface111.py  surface_smallest.py
examples/Au-TiO2/: interface_smallest.py  interface_with_opt.py
examples/CHA-AEI/: AEI.xsf  CHA.xsf  CHA_AEI.py
examples/TiO2/: surface110.py
examples/TiO2-IrO2/: IrO2.xsf  interface110.py  surface110.py
examples/bulk_structures/: TiO2.xsf
src/make_interface/: __init__.py  interface.py  surface.py
