[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make-interface"
version = "0.1.0"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
authors = [
  { name = "Ravishankar Sundararaman", email = "sundar@rpi.edu" }
]
maintainers = [
  { name = "Ravishankar Sundararaman", email = "sundar@rpi.edu" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: BSD 2-Clause License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["ase"]
